--- a/pages/pages/login/css/main.css
+++ b/pages/pages/login/css/main.css
@@ -2,24 +2,24 @@
 	display: flex;
 	flex-direction: column;
 	justify-content:center;
-	/* margin-top: 128upx; */
+	/* margin-top: 128rpx; */
 }
 
 /* 头部 logo */
 .header {
-	width:161upx;
-	height:161upx;
-	box-shadow:0upx 0upx 60upx 0upx rgba(0,0,0,0.1);
+	width:161rpx;
+	height:161rpx;
+	box-shadow:0rpx 0rpx 60rpx 0rpx rgba(0,0,0,0.1);
 	border-radius:50%;
 	background-color: #000000; 
-	margin-top: 128upx;
-	margin-bottom: 72upx;
+	margin-top: 128rpx;
+	margin-bottom: 72rpx;
 	margin-left: auto;
 	margin-right: auto;
 }
 .header image{
-	width:161upx;
-	height:161upx;
+	width:161rpx;
+	height:161rpx;
 	border-radius:50%;
 }
 
@@ -27,19 +27,19 @@
 .main {
 	display: flex;
 	flex-direction: column;
-	padding-left: 70upx;
-	padding-right: 70upx;
+	padding-left: 70rpx;
+	padding-right: 70rpx;
 }
 .tips {
 	color: #999999;
-	font-size: 28upx;
-	margin-top: 64upx;
-	margin-left: 48upx;
+	font-size: 28rpx;
+	margin-top: 64rpx;
+	margin-left: 48rpx;
 }
 
 /* 登录按钮 */
 .wbutton{
-	margin-top: 96upx;
+	margin-top: 96rpx;
 }
 
 /* 其他登录方式 */
@@ -48,13 +48,13 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	margin-top: 256upx;
+	margin-top: 256rpx;
 	text-align: center;
 }
 .login_icon{
 	border: none;
-	font-size: 64upx;
-	margin: 0 64upx 0 64upx;
+	font-size: 64rpx;
+	margin: 0 64rpx 0 64rpx;
 	color: rgba(0,0,0,0.7)
 }
 .wechat_color{
@@ -73,15 +73,15 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	font-size: 28upx;
-	margin-top: 64upx;
+	font-size: 28rpx;
+	margin-top: 64rpx;
 	color: rgba(0,0,0,0.7);
 	text-align: center;
-	height: 40upx;
-	line-height: 40upx;
+	height: 40rpx;
+	line-height: 40rpx;
 }
 .footer text{
-	font-size: 24upx;
-	margin-left: 15upx;
-	margin-right: 15upx;
+	font-size: 24rpx;
+	margin-left: 15rpx;
+	margin-right: 15rpx;
 }
