--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,3 +1,3 @@
-$c-font: rgba(0, 0, 0, 0.87);
-$c-background: #f5f5f5;
-$c-border: #e0e0e0;
+$t-font-color: rgba(0, 0, 0, 0.87);
+$t-bg-color: #f5f5f5;
+$t-border-color: #e0e0e0;
