--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,4 +1,4 @@
 $t-font-color: rgba(0, 0, 0, 0.87);
-$t-bg-color: #f5f5f5;
-$t-border-color: #e0e0e0;
+$t-bg-color: #fbfbfd;
+$t-border-color: rgba(0,0,0,.15);
 $t-gray: #86868b;
