--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,4 +1,24 @@
-$t-font-color: rgba(0, 0, 0, 0.87);
-$t-bg-color: #fbfbfd;
-$t-border-color: rgba(0,0,0,.15);
-$t-gray: #86868b;
+// $c mean color
+$c-font: rgba(0, 0, 0, 0.87);
+$c-background: #f5f5f5;
+$c-border: rgba(0, 0, 0, 0.15);
+$c-gray: #86868b;
+$c-price:#fa3534;
+
+.reset-button {
+  margin: 0;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0);
+  line-height: inherit;
+  border-radius: 0;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &::after {
+    border: none;
+  }
+  &-hover {
+    background-color: rgba(0, 0, 0, 0);
+  }
+}
