--- a/styles/product.scss
+++ b/styles/product.scss
@@ -28,7 +28,8 @@
         color: $c-price;
         font-size: 40rpx;
         line-height: 30rpx;
-        text {
+        &::before {
+          content: '￥';
           font-size: 24rpx;
         }
       }
@@ -67,7 +68,8 @@
       &-price {
         color: $c-price;
         font-size: 40rpx;
-        text {
+        &::before {
+          content: '￥';
           font-size: 24rpx;
         }
       }
