--- a/styles/product.scss
+++ b/styles/product.scss
@@ -29,7 +29,8 @@
         font-size: 40rpx;
         line-height: 30rpx;
         &::before {
-          content: '￥';
+          content: '£';
+          padding-right: 4rpx;
           font-size: 24rpx;
         }
       }
@@ -69,7 +70,8 @@
         color: $c-price;
         font-size: 40rpx;
         &::before {
-          content: '￥';
+          content: '£';
+          padding-right: 4rpx;
           font-size: 24rpx;
         }
       }
