--- a/styles/product.scss
+++ b/styles/product.scss
@@ -29,7 +29,7 @@
         font-size: 40rpx;
         line-height: 30rpx;
         &::before {
-          content: '£';
+          content: '￥';
           padding-right: 4rpx;
           font-size: 24rpx;
         }
@@ -70,7 +70,7 @@
         color: $c-price;
         font-size: 40rpx;
         &::before {
-          content: '£';
+          content: '￥';
           padding-right: 4rpx;
           font-size: 24rpx;
         }
