--- a/styles/product.scss
+++ b/styles/product.scss
@@ -22,6 +22,7 @@
       width: 100%;
       padding: 0 16rpx 16rpx;
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: flex-end;
       &-price {
