--- a/styles/coupon.scss
+++ b/styles/coupon.scss
@@ -38,7 +38,7 @@
         padding: 0 24rpx;
         font-size: 60rpx;
         &::before {
-          content: '£';
+          content: '￥';
           padding: 36rpx 4rpx 0;
           font-size: 24rpx;
         }
