--- a/styles/product.scss
+++ b/styles/product.scss
@@ -30,7 +30,7 @@
         font-size: 32rpx;
         line-height: 30rpx;
         &::before {
-          content: '£';
+          content: '￥';
           padding-right: 4rpx;
           font-size: 24rpx;
         }
@@ -71,7 +71,7 @@
         color: $c-price;
         font-size: 40rpx;
         &::before {
-          content: '£';
+          content: '￥';
           padding-right: 4rpx;
           font-size: 24rpx;
         }
